secured api endpoints using jwt