@@ -1,37 +1,42 @@
 package de.dtonal.stocktracker.service;
 
+import de.dtonal.stocktracker.dto.StockTransactionRequest;
 import de.dtonal.stocktracker.model.*;
 import de.dtonal.stocktracker.repository.PortfolioRepository;
 import de.dtonal.stocktracker.repository.StockRepository;
 import de.dtonal.stocktracker.repository.StockTransactionRepository;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
-import org.junit.jupiter.api.extension.ExtendWith;
-import org.mockito.InjectMocks;
-import org.mockito.Mock;
-import org.mockito.MockitoAnnotations;
-import org.mockito.junit.jupiter.MockitoExtension;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.boot.test.context.SpringBootTest;
+import org.springframework.boot.test.mock.mockito.MockBean;
+import org.springframework.security.access.AccessDeniedException;
+import org.springframework.security.test.context.support.WithMockUser;
 
 import java.math.BigDecimal;
-import java.time.LocalDate;
 import java.time.LocalDateTime;
-import java.util.*;
+import java.util.Collections;
+import java.util.List;
+import java.util.Optional;
 
-import static org.assertj.core.api.Assertions.*;
-import static org.mockito.Mockito.*;
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.assertj.core.api.Assertions.assertThatThrownBy;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.Mockito.verify;
+import static org.mockito.Mockito.when;
 
-@ExtendWith(MockitoExtension.class)
-public class PortfolioServiceImplTest {
+@SpringBootTest
+class PortfolioServiceImplTest {
 
-    @Mock
+    @Autowired
+    private PortfolioService portfolioService;
+
+    @MockBean
     private PortfolioRepository portfolioRepository;
-    @Mock
+    @MockBean
     private StockRepository stockRepository;
-    @Mock
+    @MockBean
     private StockTransactionRepository stockTransactionRepository;
-
-    @InjectMocks
-    private PortfolioServiceImpl portfolioService;
 
     private User user;
     private Portfolio portfolio;
@@ -39,112 +44,82 @@ public class PortfolioServiceImplTest {
 
     @BeforeEach
     void setUp() {
-        MockitoAnnotations.openMocks(this);
-        user = new User("Max Mustermann", "max@example.com", "password");
+        user = new User("Max Mustermann", "test@example.com", "password");
         portfolio = new Portfolio("Mein Portfolio", "Testbeschreibung", user);
-        portfolio.setUser(user);
         stock = new Stock("AAPL", "Apple Inc.", "NASDAQ", "USD");
     }
 
     @Test
     void testCreatePortfolio() {
-        when(portfolioRepository.save(any(Portfolio.class))).thenAnswer(invocation -> {
-            Portfolio p = invocation.getArgument(0);
-            p.setUser(user);
-            return p;
-        });
+        when(portfolioRepository.save(any(Portfolio.class))).thenReturn(portfolio);
         Portfolio created = portfolioService.createPortfolio("Mein Portfolio", "Testbeschreibung", user);
         assertThat(created.getName()).isEqualTo("Mein Portfolio");
-        assertThat(created.getDescription()).isEqualTo("Testbeschreibung");
-        assertThat(created.getUser()).isEqualTo(user);
         verify(portfolioRepository).save(any(Portfolio.class));
     }
 
     @Test
-    void testGetPortfolioById() {
+    @WithMockUser(username = "test@example.com")
+    void findById_shouldSucceed_whenUserIsOwner() {
         when(portfolioRepository.findById(1L)).thenReturn(Optional.of(portfolio));
-        Optional<Portfolio> result = portfolioService.getPortfolioById(1L);
+        Optional<Portfolio> result = portfolioService.findById(1L);
         assertThat(result).isPresent();
         assertThat(result.get()).isEqualTo(portfolio);
     }
 
     @Test
-    void testGetUserPortfolios() {
-        List<Portfolio> portfolios = List.of(portfolio);
-        when(portfolioRepository.findByUser(user)).thenReturn(portfolios);
-        List<Portfolio> result = portfolioService.getUserPortfolios(user);
+    @WithMockUser(username = "another@user.com")
+    void findById_shouldFail_whenUserIsNotOwner() {
+        when(portfolioRepository.findById(1L)).thenReturn(Optional.of(portfolio));
+        assertThatThrownBy(() -> portfolioService.findById(1L))
+                .isInstanceOf(AccessDeniedException.class);
+    }
+
+    @Test
+    void testFindByUser() {
+        when(portfolioRepository.findByUser(user)).thenReturn(Collections.singletonList(portfolio));
+        List<Portfolio> result = portfolioService.findByUser(user);
         assertThat(result).containsExactly(portfolio);
     }
 
     @Test
-    void testAddStockTransaction() {
-        portfolio.setUser(user);
+    @WithMockUser(username = "test@example.com")
+    void addTransaction_shouldSucceed_whenUserIsOwner() {
         when(portfolioRepository.findById(1L)).thenReturn(Optional.of(portfolio));
         when(stockRepository.findBySymbol("AAPL")).thenReturn(Optional.of(stock));
         when(stockTransactionRepository.save(any(StockTransaction.class))).thenAnswer(invocation -> invocation.getArgument(0));
 
-        StockTransaction transaction = portfolioService.addStockTransaction(
-                1L, "AAPL", new BigDecimal("10"), new BigDecimal("150.00"), LocalDate.now(), "BUY");
+        StockTransactionRequest request = new StockTransactionRequest();
+        request.setStockSymbol("AAPL");
+        request.setQuantity(new BigDecimal("10"));
+        request.setPricePerShare(new BigDecimal("150.00"));
+        request.setTransactionDate(LocalDateTime.now());
+        request.setTransactionType(TransactionType.BUY);
 
+        StockTransaction transaction = portfolioService.addTransaction(1L, request);
         assertThat(transaction.getPortfolio()).isEqualTo(portfolio);
         assertThat(transaction.getStock()).isEqualTo(stock);
-        assertThat(transaction.getQuantity()).isEqualTo(new BigDecimal("10"));
-        assertThat(transaction.getPricePerShare()).isEqualTo(new BigDecimal("150.00"));
-        assertThat(transaction.getTransactionType()).isEqualTo(TransactionType.BUY);
-        verify(stockTransactionRepository).save(any(StockTransaction.class));
+    }
+    
+    @Test
+    @WithMockUser(username = "another@user.com")
+    void addTransaction_shouldFail_whenUserIsNotOwner() {
+        when(portfolioRepository.findById(1L)).thenReturn(Optional.of(portfolio));
+        StockTransactionRequest request = new StockTransactionRequest();
+        
+        assertThatThrownBy(() -> portfolioService.addTransaction(1L, request))
+                .isInstanceOf(AccessDeniedException.class);
     }
 
     @Test
-    void testGetCurrentStockQuantityInPortfolio() {
+    @WithMockUser(username = "test@example.com")
+    void getStockQuantity_shouldSucceed_whenUserIsOwner() {
         when(portfolioRepository.findById(1L)).thenReturn(Optional.of(portfolio));
-        when(stockRepository.findBySymbol("AAPL")).thenReturn(Optional.of(stock));
-        List<StockTransaction> transactions = List.of(
-                new StockTransaction(stock, portfolio, LocalDateTime.now(), new BigDecimal("10"), new BigDecimal("100.00"), TransactionType.BUY),
-                new StockTransaction(stock, portfolio, LocalDateTime.now(), new BigDecimal("3"), new BigDecimal("110.00"), TransactionType.SELL)
-        );
-        when(stockTransactionRepository.findByPortfolioAndStock(portfolio, stock)).thenReturn(transactions);
-        BigDecimal result = portfolioService.getCurrentStockQuantityInPortfolio(1L, "AAPL");
-        assertThat(result).isEqualTo(new BigDecimal("7"));
-    }
+        when(stockTransactionRepository.findByPortfolioIdAndStockSymbol(1L, "AAPL")).thenReturn(List.of(
+                new StockTransaction(stock, portfolio, LocalDateTime.now(), new BigDecimal("10"), BigDecimal.ZERO, TransactionType.BUY),
+                new StockTransaction(stock, portfolio, LocalDateTime.now(), new BigDecimal("3"), BigDecimal.ZERO, TransactionType.SELL)
+        ));
 
-    @Test
-    void testGetCurrentStockValueInPortfolio() {
-        when(portfolioRepository.findById(1L)).thenReturn(Optional.of(portfolio));
-        when(stockRepository.findBySymbol("AAPL")).thenReturn(Optional.of(stock));
-        List<StockTransaction> transactions = List.of(
-                new StockTransaction(stock, portfolio, LocalDateTime.now(), new BigDecimal("5"), new BigDecimal("100.00"), TransactionType.BUY),
-                new StockTransaction(stock, portfolio, LocalDateTime.now(), new BigDecimal("2"), new BigDecimal("120.00"), TransactionType.SELL),
-                new StockTransaction(stock, portfolio, LocalDateTime.now(), new BigDecimal("1"), new BigDecimal("130.00"), TransactionType.BUY)
-        );
-        when(stockTransactionRepository.findByPortfolioAndStock(portfolio, stock)).thenReturn(transactions);
-        // Der letzte Preis ist 130.00, Menge: 4
-        BigDecimal result = portfolioService.getCurrentStockValueInPortfolio(1L, "AAPL");
-        assertThat(result).isEqualTo(new BigDecimal("4").multiply(new BigDecimal("130.00")));
-    }
-
-    @Test
-    void testGetTotalPortfolioValue() {
-        when(portfolioRepository.findById(1L)).thenReturn(Optional.of(portfolio));
-        List<StockTransaction> transactions = List.of(
-                new StockTransaction(stock, portfolio, LocalDateTime.now(), new BigDecimal("5"), new BigDecimal("100.00"), TransactionType.BUY),
-                new StockTransaction(stock, portfolio, LocalDateTime.now(), new BigDecimal("2"), new BigDecimal("120.00"), TransactionType.SELL)
-        );
-        when(stockTransactionRepository.findByPortfolio(portfolio)).thenReturn(transactions);
-        BigDecimal result = portfolioService.getTotalPortfolioValue(1L);
-        // 5*100 - 2*120 = 500 - 240 = 260
-        assertThat(result).isEqualTo(new BigDecimal("260.00"));
-    }
-
-    @Test
-    void testGetTotalStockValueInPortfolio() {
-        // Diese Methode ruft getCurrentStockValueInPortfolio intern auf
-        when(portfolioRepository.findById(1L)).thenReturn(Optional.of(portfolio));
-        when(stockRepository.findBySymbol("AAPL")).thenReturn(Optional.of(stock));
-        List<StockTransaction> transactions = List.of(
-                new StockTransaction(stock, portfolio, LocalDateTime.now(), new BigDecimal("5"), new BigDecimal("100.00"), TransactionType.BUY)
-        );
-        when(stockTransactionRepository.findByPortfolioAndStock(portfolio, stock)).thenReturn(transactions);
-        BigDecimal result = portfolioService.getTotalStockValueInPortfolio(1L, "AAPL");
-        assertThat(result).isEqualTo(new BigDecimal("5").multiply(new BigDecimal("100.00")));
+        BigDecimal quantity = portfolioService.getStockQuantity(1L, "AAPL");
+        assertThat(quantity).isEqualByComparingTo("7");
     }
 }
